Add a working filter example

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -5,6 +5,14 @@
         <title>{% block title %}Welcome!{% endblock %}</title>
         {% block stylesheets %}{% endblock %}
         <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
+
+        {% javascripts 
+            '@CoceptFilterBundle/Resources/public/js/jquery.js'
+            '@CoceptFilterBundle/Resources/public/js/jquery.query-object.js'
+            '@CoceptFilterBundle/Resources/public/js/filter.js'
+         %}
+            <script src="{{ asset_url }}"></script>
+        {% endjavascripts %}
     </head>
     <body>
         {% block body %}{% endblock %}
