--- a/app/Resources/views/post/index.html.twig
+++ b/app/Resources/views/post/index.html.twig
@@ -34,7 +34,7 @@
         <tfoot>
             <td></td>
             <td>
-                {{ filterWidget('name', allNames) }}
+                {{ filterWidget('name') }}
             </td>
             <td>
                 {{ filterWidget('category', allCategories) }}
